--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Agboro O. Destiny Data Analyst and Data Scientist Portfolio</h1>
-						<p>This portfolio showcases all my projects and skills as a Data Analyst and Data Scientist.</p>
+						<p>This portfolio showcases some of  my projects and skills as a Data Analyst and Data Scientist.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
