--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
 		<!-- Intro -->
 		<div id="intro">
 			<h1>Agboro O. Destiny Data Analyst and Data Scientist Portfolio</h1>
-			<p>This portfolio showcases some of  my projects and skills as a Data Analyst and Data Scientist.</p>
+			<p>
+				This portfolio showcases some of  my projects and skills as a Data Analyst and Data Scientist.<br />
+				Performance-driven with more than three years of experience, as a data scientist and analyst I have examined and interpreted vast amounts of intricate data and extracting, transforming, analyzing, visualizing, and disseminating critical business data and insights at different phases of projects. helped provide timely intelligence and strategic reports and dynamic dashboards that fueled corporate performance. a track record of success working with internal cross-functional teams. Proficiency in utilizing critical thinking, problem-solving techniques, research acumen, rapid learning capacity, and team leadership to optimise output and operational effectiveness.
+			</p>
 			<ul class="actions">
 				<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 			</ul>
