--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 							</a>
 						</h2>
 					</header>
-					<a href="#" class="image fit"><img src="Promotion.PNG" alt="" /></a>
+					<a href="#" class="image fit"><img src="Promotionr.JPG" alt="" /></a>
 					<p>
 						Use your data analysis skills to study the pattern of promotion. With this insight, stake holder can understand the important features among available features that can be used to recommend promotion eligibility. This analysis was performed using Python.<br />
 						After analysis,only 8.5% have received promotions and I also findout that Staffs who attended training more than 10 times scored below 8 points in performance ,failed to meet targets, and were not promoted, indicating potential ineffectiveness of excessive training.
@@ -109,7 +109,7 @@
 							</a>
 						</h2>
 					</header>
-					<a href="#" class="image fit"><img src="flexapp.PNG" alt="" /></a>
+					<a href="#" class="image fit"><img src="flexappr.JPG" alt="" /></a>
 					<p>
 						Aim of Project
 						Look at how users behave and what they say to find out what needs to
