--- a/index.html
+++ b/index.html
@@ -160,15 +160,15 @@
 						
 						<h2>
 							<a href="#">
-								Anlysis using Python and Machine Learning Models Projects<br />
-								Machine Learning Models Projects
+								Anlysis using Python and Building Machine Learning Model Projects<br />
+								
 							</a>
 						</h2>
 					</header>
 					<a href="#" class="image fit"><img src="PYTHONPro.jpg" alt="" /></a>
 					<p>
 						For other in depth anlysis with python and Machine Learning Models Projects .
-						These are data raging from sport,Security,Education,Sales   
+						These are data ranging from sport,Security,Education,Sales   
 						Customer Churn rate,Fashion and Health sector.
 					</p>
 					<ul class="actions special">
@@ -320,25 +320,23 @@
 				<section class="alt">
 					<h3>Address</h3>
 					<p>
-						1234 Somewhere Road #87257<br />
-						Nashville, TN 00000-0000
+						Hatfield,England.<br />
+						United Kingdom.  
 					</p>
 				</section>
 				<section>
 					<h3>Phone</h3>
-					<p><a href="#">(000) 000-0000</a></p>
+					<p><a href="#">(+44) 77765-03703</a></p>
 				</section>
 				<section>
 					<h3>Email</h3>
-					<p><a href="#">info@untitled.tld</a></p>
+					<p><a href="#">Agboroogaga@gmail.com</a></p>
 				</section>
 				<section>
 					<h3>Social</h3>
 					<ul class="icons alt">
-						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+						<li><a href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile" class="icon brands fa-linkedin"><span class="label">linkedin</span></a></li>
+						<li><a href="https://github.com/DestinyAgboro" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 					</ul>
 				</section>
 			</section>
@@ -346,7 +344,7 @@
 
 		<!-- Copyright -->
 		<div id="copyright">
-			<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+			<ul><li> </li><li>Design: <a href="#">Glodest</a></li></ul>
 		</div>
 
 	</div>
