--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 				</header>
 				<a href="#" class="image main"><img src="ROBOTS.jpg" alt="" /></a>
 				<ul class="actions special">
-					<li><a href="https://app.powerbi.com/groups/6d0529e8-15cc-416c-b794-ea8979425e78/reports/a6cfe1c9-4932-47bb-aa1f-535027a66eb5/5d2eb315828a4e740bf7?experience=power-bi" class="button large">Check it out</a></li>
+					<li><a href="https://docs.google.com/presentation/d/1upuMIvoUvOXT213U4GTfEfPJB6EAwayW/edit#slide=id.p5" class="button large">Check it out</a></li>
 				</ul>
 			</article>
 
@@ -152,7 +152,7 @@
 
 					</p>
 					<ul class="actions special">
-						<li><a href="https://app.powerbi.com/groups/bc128288-b98d-49c7-b8fb-a58e47406399/reports/23824f35-a481-4a2a-9cf5-713543b52d45/f1c9f4c6a45e9b7b5121?experience=power-bi" class="button">Check it out</a></li>
+						<li><a href="https://onedrive.live.com/?cid=1B9F7E798D352BB4&id=1B9F7E798D352BB4%21s742f1bfec1e3447aaf603b0f90080f7f&parId=root&o=OneUp" class="button">Check it out</a></li>
 					</ul>
 				</article>
 				<article>
@@ -271,7 +271,7 @@
 						This analysis was performed using Power BI.
 					</p>
 					<ul class="actions special">
-						<li><a href="https://app.powerbi.com/groups/e8436f9d-e411-4c49-9d67-367ea18f65b2/reports/a72010d9-6e89-4a64-afdd-c9404071e3a4/7b6b8cf17b02ed359122?experience=power-bi" class="button">CHECK IT OUT</a></li>
+						<li><a href="https://onedrive.live.com/?cid=1B9F7E798D352BB4&id=1B9F7E798D352BB4%21sdd9e783dc846486591f8bf3739fa0225&parId=root&o=OneUp" class="button">CHECK IT OUT</a></li>
 					</ul>
 				</article>
 			</section>
